# Cpp.BLCKNX

./: .gitignore  CMakeLists.txt
Challenges/CTBL/: Ctbl.cpp  Ctbl.h  CtblTest.cpp  main.cpp
Challenges/CUNR/: Cunr.cpp  Cunr.h  CunrTest.cpp  main.cpp
Challenges/DNA/: Dna.cpp  Dna.h  DnaTest.cpp  main.cpp
Challenges/EDIT/: Edit.cpp  Edit.h  EditTest.cpp  main.cpp
Challenges/EDTA/: Edta.cpp  Edta.h  EdtaTest.cpp  main.cpp
Challenges/GLOB/: Glob.cpp  Glob.h  GlobTest.cpp  main.cpp
Challenges/KSIM/: Ksim.cpp  Ksim.h  KsimTest.cpp  main.cpp
Challenges/LCSM/: Lcsm.cpp  Lcsm.h  LcsmTest.cpp  main.cpp
Challenges/LCSQ/: Lcsq.cpp  Lcsq.h  LcsqTest.cpp  main.cpp
Challenges/LOCA/: Loca.cpp  Loca.h  LocaTest.cpp  main.cpp
Challenges/REVC/: Revc.cpp  Revc.h  RevcTest.cpp  main.cpp
Challenges/RNA/: Rna.cpp  Rna.h  RnaTest.cpp  main.cpp
Challenges/ROOT/: Root.cpp  Root.h  RootTest.cpp  main.cpp
Challenges/SIMS/: Sims.cpp  Sims.h  SimsTest.cpp  main.cpp
Challenges/SPTD/: Sptd.cpp  Sptd.h  SptdTest.cpp  main.cpp
Challenges/SUBS/: Subs.cpp  Subs.h  SubsTest.cpp  main.cpp  subs.cpp
Lib/Blcknx/: Challenge.cpp  Challenge.h  ChallengeTest.cpp
Lib/challenges/: conf.py  runner.py  scaffold.py
Libraries/Blcknx/: CMakeLists.txt
Libraries/Blcknx/include/: Aligner.h  Alignment.h  AlignmentScoreEvaluatorInterface.h  AlignmentScoreMeasurer.h  AlignmentScoreProviderInterface.h  Blosum62.h  Blosum62ScoreEvaluator.h  Blosum62ScoreProvider.h  Challenge.h  CharacterTable.h  EditDistance.h  EditDistanceAlignment.h  EditDistanceScoreEvaluator.h  EditDistanceScoreProvider.h  LongestCommenSubsequenceScoreEvaluator.h  LongestCommenSubsequenceScoreProvider.h  MismatchScoreProvider.h  Pam250ScoreProvider.h  TableReader.h
Libraries/Blcknx/src/: Aligner.cpp  Alignment.cpp  AlignmentScoreMeasurer.cpp  Blosum62.cpp  Challenge.cpp  CharacterTable.cpp  EditDistance.cpp  EditDistanceAlignment.cpp  TableReader.cpp
Libraries/Blcknx/src/AlignmentScoreEvalutators/: Blosum62ScoreEvaluator.cpp  EditDistanceScoreEvaluator.cpp  LongestCommenSubsequenceScoreEvaluator.cpp
Libraries/Blcknx/src/AlignmentScoreProviders/: Blosum62ScoreProvider.cpp  EditDistanceScoreProvider.cpp  LongestCommenSubsequenceScoreProvider.cpp  MismatchScoreProvider.cpp  Pam250ScoreProvider.cpp
Libraries/Blcknx/tests/: AlignerTest.cpp  AlignmentScoreMeasurerTest.cpp  AlignmentTest.cpp  Blosum62ScoreEvaluatorTest.cpp  Blosum62ScoreProviderTest.cpp  Blosum62Test.cpp  ChallengeTest.cpp  CharacterTableTest.cpp  EditDistanceAlignmentTest.cpp  EditDistanceScoreEvaluatorTest.cpp  EditDistanceScoreProviderTest.cpp  EditDistanceTest.cpp  LongestCommenSubsequenceScoreEvaluatorTest.cpp  LongestCommenSubsequenceScoreProviderTest.cpp  MismatchScoreProviderTest.cpp  Pam250ScoreProviderTest.cpp  TableReaderTest.cpp
Libraries/challenges/: __init__.py  conf.py  main.py  runner.py  scaffold.py
